--- a/Samlet R.Rmd
+++ b/Samlet R.Rmd
@@ -1,14 +1,37 @@
 ---
 title: "Anchored Links"
-output: 
-  html_document:
-    includes:
-      after_body: anchor.html
+output:
+  pdf_document: default
 ---
 
 (!) = skal testes om den er true
 
+! = mangler eksempel
+
+```{r}
+x <- "3.7 1.9 4.8 11.7 2.8 4.7 2.7 4.9 6.7 3.8"
+lifetime <- as.numeric(strsplit(x, " ")[[1]])
+```
+
 # 1 sample data
+
+## CI
+
+![](images/paste-0604CCE6.png)
+
+```{r}
+x <- c(168, 161, 167, 179, 184, 166, 198, 187, 191, 179)
+n <- length(x)
+s <- sd(x)
+chi <- qchisq(c(0.025, 0.975),n-1)
+#var
+var_ci <- (n-1)*(s^2) * chi^-1
+#sd
+sd_ci <- sqrt(var_ci)
+
+var_ci
+sd_ci
+```
 
 ## Which sample size to choose?
 
@@ -70,6 +93,9 @@ A.sd <- sd(xA)
 B.sd <- sd(xB)
 
 # df
+vs=c(var(xA), var(xB))
+ns=c(length(xA), length(xB))
+
 v <- ((vs[1]/ns[1]+vs[2]/ns[2])^2)/((vs[1]/ns[1])^2/(ns[1]-1)+(vs[2]/ns[2])^2/(ns[2]-1))
 
 t.quantile <- qt(0.975, v)
@@ -95,7 +121,7 @@ xB <- c(9.21, 11.51, 12.79, 11.85, 9.97, 8.79, 9.69, 9.68, 9.19)
 
 ms=c(mean(xA), mean(xB))
 vs=c(var(xA), var(xB))
-n=c(length(xA), length(xB))
+ns=c(length(xA), length(xB))
 
 # Test statistic
 tobs <- (ms[2]-ms[1])/sqrt(vs[1]/ns[1]+vs[2]/ns[2])
@@ -118,39 +144,263 @@ t.test(xA, xB)
 ## Power/sample in two way
 
 ```{r}
-#power: 80% chance for at accep den hvis den er true
-# a = sig.level
-# delta, den diffrence i mean vi vil kunne se forskell på. Relevant fordi vi kigger på difference
-# Den her er mere accurate da den bruge t-dist
-power.t.test(power=0.8, delta=4, sd=12.21, sig.level=0.05, type="one.sample")
+# Finding the sample size for detecting a group difference of 2
+# with sigma=1 and power=0.9
+# Her har vi ikke type = "one.sample" på
+power.t.test(power=0.90, delta=2, sd=1, sig.level=0.05)
+
+# udfra hvad du giver den, regner den noget forskelligt eg
+# Finding the sample size for detecting a group difference of 2
+# with sigma=1 and power=0.9
+power.t.test(power=0.90, delta=2, sd=1, sig.level=0.05)
+
 ```
 
-# One-way anova
+# anova test
 
-## post hoc comparison
+## One-way anova
 
-### Confidence interval
+```{r}
+D <- data.frame(strength=c(44.6, 52.8, 53.1, 51.5, 48.2, 50.5, 58.3, 50.0, 53.7, 40.8,
+46.3, 55.4, 54.4, 50.5, 44.5, 48.5, 57.4, 55.3, 54.4, 43.9,
+45.2, 58.1, 50.6, 47.5, 45.9, 52.3, 54.6, 53.4, 47.8, 42.5),
+plastictype = factor(rep(1:5,6))
+)
+
+fit <- lm(strength ~ plastictype, data=D)
+an <- anova(fit)
+an
+
+```
+
+### POST hoc pairwaise CI
 
 ![](images/paste-A3F74BCB.png){width="501"}
 
 ```{r}
-ya <- -0.5416667
-yb <- -0.6816667 
-a <- 0.05
-a_after_bon <- a/1
-MSE <- 0.16207
-ni <- 6
-nj <- 6
-df <- 25 -4
-(difference <- ya -yb)
-interval <- 1-(a_after_bon/2)
-fordelling <- qt(0.975, df)
-sqroot <- sqrt(MSE*((1/ni)+(1/nj))
-sqrt(MSE*((1/ni)+(1/nj)))
-difference + c(-1, 1)*plus_minus
+rm(list = ls())
+a.mean <- -0.5416667
+b.mean <- -0.6816667 
+
+an <- 10
+bn <- 10
+n <- 25
+k <- 4
+df <- n-k
+
+a <- 0.05/1
+mse <- 0.16207
+
+mean.dif <- an - bn
+
+t.quant <- qt(1-(a/2), df)
+inner <- mse * ((1/an) + (1/an))
+scale <- sqrt(inner)
+
+mean.dif + c(-1,1)*t.quant*scale
 
 ```
 
-### Post hoc pairwise hypothesis test
+### LSD values - samme antal obs
 
-![](images/paste-8F193119.png){width="512"}
+![](images/paste-EF9E80A8.png)
+
+```{r}
+
+m <- 2  # Antal obs i hver kategory
+
+mse <- 0.16207
+ny_alpha = 0.005
+n <- 10
+k <- 2
+
+LSD <- qt(1-(ny_alpha/2), n-k)*sqrt(2*mse*(1/m))
+LSD
+```
+
+## Post hoc hypothesis test
+
+![](images/paste-53DAE37F.png)
+
+```{r}
+rm(list = ls())
+a.mean <- -0.5416667
+b.mean <- -0.6816667 
+
+an <- 10
+bn <- 10
+n <- 25
+k <- 4
+df <- n-k
+
+a <- 0.05/1
+mse <- 0.16207
+mean.dif <- a.mean - b.mean
+
+t.obs <- mean.dif/ sqrt(mse*((1/an)+ (1/bn)))
+t.obs
+
+pval <- 2* (1- pt(t.obs, df))
+
+```
+
+## Two way ANOVA
+
+![](images/paste-17E89932.png)
+
+![](images/paste-D7BE555B.png)
+
+![](images/paste-2C24DD75.png)
+
+testen laves som pval = 1-pf(fobs, l-1, (k-1)(l-1)
+
+# PROPORTION analysis
+
+## 1 population proportion analysis
+
+### CI
+
+![](images/paste-F18008D4.png) small size er når:
+
+![](images/paste-F461CE05.png){width="297"}
+
+```{r}
+x <- 518
+n <- 1154
+p.hat <- x/n
+z.quantile <- qnorm(0.975)
+scale <- sqrt(((p.hat*(1-p.hat))/n))
+p.hat + c(-1,1) * z.quantile * scale
+scale
+```
+
+```{r}
+prop.test(518,1154,correct = FALSE)
+```
+
+### hypothesis test
+
+![](images/paste-A1DFB35D.png)
+
+```{r}
+x <- 518
+n <- 1154
+p.hat <- x/n
+# Test statistic
+# is 0.5 the true proportion?
+p0 <- 0.5
+zobs <- (x - n*p0) / sqrt(n*p0*(1-p0))
+
+# Husk abs a zobs
+p.val <- 2 * (1-pnorm(abs(zobs)))
+p.val
+```
+
+```{r}
+prop.test(518,1154,correct = FALSE)
+```
+
+### ME !
+
+![](images/paste-976A83CA.png)
+
+## Two proportions
+
+### CI og sd/var !
+
+![](images/paste-F2F10D1B.png)
+
+![](images/paste-8CDDC557.png)
+
+### Hypothesis test !
+
+![](images/paste-4504BCB5.png)
+
+```{r}
+
+```
+
+```{r}
+prop.test(x=c(23,35), n=c(57,167), correct=FALSE, conf.level=0.99)
+```
+
+## Multi sample ! på en axis![](images/paste-FAA8A060.png)
+
+![](images/paste-8941EED0.png)
+
+![](images/paste-DC767C49.png)
+
+```{r}
+pill.study <- matrix(c(23, 35, 34, 132), ncol = 2, byrow = TRUE)
+rownames(pill.study) <- c("Blood Clot", "No Clot")
+colnames(pill.study) <- c("Pill", "No pill")
+chi <- chisq.test(pill.study, correct = FALSE)
+#X-squared er test statistic (?)
+chi
+chi$expected
+```
+
+## Multisample på begge
+
+![](images/paste-C984ABAC.png)
+
+![](images/paste-3991A528.png)
+
+![](images/paste-34772F7F.png)
+
+# Simulation methods
+
+## Bootstrapping
+
+# normal LR
+
+![](images/paste-1FCEFCDC.png) ![](images/paste-121987EA.png)
+
+```{r}
+
+b0 <- -120
+b1 <- 1.113
+xnew <- 200
+
+mean <- 178
+n <- 10
+df <- n-2
+sd <- 3.88
+sxx <- 1342
+
+"CI:"
+tquantile <- qt(0.975, df)
+scale <- sd * sqrt(1/n + (mean - xnew)^2/sxx )
+b0+b1*xnew + c(-1, 1)*tquantile*scale
+
+"Prediction Interval:"
+tquantile <- qt(0.975, df)
+scale <- sd * sqrt(1 + 1/n + (mean - xnew)^2/sxx )
+b0+b1*xnew + c(-1, 1)*tquantile*scale
+```
+
+```{r}
+# Direkte med r
+y <- c(8.43, 7.89, 8.28, 7.84, 9.62, 9.41, 9.40, 8.22, 9.18, 9.17,
+9.25, 9.68, 8.49, 8.53, 9.30, 8.94, 9.46, 9.69, 9.37, 9.42,
+9.13, 9.18)
+x <- year <- 1984:2005
+fit <- lm(y ~ x)
+
+newdata <- data.frame(x = 2017)
+predict(fit, newdata=newdata, interval="confidence",
+level=0.95)
+predict(fit, newdata=newdata, interval="prediction",
+level=0.95)
+
+```
+
+![](images/paste-AEA2D6A6.png)
+
+![](images/paste-820665B5.png)
+
+![](images/paste-D5050784.png)
+
+# MLR
+
+![](images/paste-C0FD034C.png)
