--- a/Samlet R.Rmd
+++ b/Samlet R.Rmd
@@ -8,11 +8,47 @@ output:
 
 (!) = skal testes om den er true
 
-! = mangler eksempel![](images/paste-D59091A9.png)
+! = mangler eksempel
+
+# simulation
+
+```{r}
+rep <- replicate(10000, mean(rnorm(n = 25,mean = 5,sd = 2)))
+length(rep[rep > 4.5]) / length(rep)
+
+# ekstra:  hist(qnorm(runif(n)))
+```
+
+![](images/paste-D59091A9.png)
 
 ```{r}
 x <- "3.7 1.9 4.8 11.7 2.8 4.7 2.7 4.9 6.7 3.8"
 lifetime <- as.numeric(strsplit(x, " ")[[1]])
+for (x in seq(15,15.1,0.01)){
+    print(x)
+    print(qnorm(0.84,100,x))}
+```
+
+## book def quantiles
+
+![](images/paste-52E0F570.png)
+
+```{r}
+
+x <- c(39.5, 59.7, 42.1, 13, 3.6, 10.9, 61.6, 1, 17.8, 5,
+       24.3, 21, 4.2, 21.1, 78.9, 11.1, 6.6, 0.3, 9.2, 10.4)
+
+x <- sort(x)
+
+pn.0.75 <- length(x)*0.75
+q.075 <- (x[pn.0.75] + x[pn.0.75 +1] )/2
+
+pn.0.25 <- length(x)*0.25
+q.025 <- (x[pn.0.25] + x[pn.0.25 +1] )/2
+
+
+q.075- q.025
+
 ```
 
 # 1 sample data
@@ -41,6 +77,7 @@ mean <- 367.2
 sd <- 571.5
 tobs <- (mean-mu)/(sd/sqrt(n))
 2*(1-pt(tobs, n-1))
+t.test(x,mu = 3)
 ```
 
 ## CI for var/sd
@@ -97,6 +134,7 @@ diff <- 4
 med r direkte
 
 ```{r}
+# HUSK DETTE ER 1 DATA IKKE TWO SIDED
 #power: 80% chance for at accep den hvis den er true
 # a = sig.level
 # delta, den diffrence i mean vi vil kunne se forskell på. Relevant fordi vi kigger på difference
@@ -146,15 +184,15 @@ t.test(xA,xB)
 ![](images/paste-8E79CF8C.png)
 
 ```{r}
-xA <- c(7.53, 7.48, 8.08, 8.09, 10.15, 8.4, 10.88, 6.13, 7.9)
-xB <- c(9.21, 11.51, 12.79, 11.85, 9.97, 8.79, 9.69, 9.68, 9.19)
+
 
 ms=c(mean(xA), mean(xB))
 vs=c(var(xA), var(xB))
 ns=c(length(xA), length(xB))
 
 # Test statistic
-tobs <- (ms[2]-ms[1])/sqrt(vs[1]/ns[1]+vs[2]/ns[2])
+tobs <- tobs <- (ms[1]-ms[2])/sqrt(vs[1]/ns[1]+vs[2]/ns[2])
+tobs
 
 # Degrees of freedom
 v=((vs[1]/ns[1]+vs[2]/ns[2])^2)/((vs[1]/ns[1])^2/(ns[1]-1)+(vs[2]/ns[2])^2/(ns[2]-1))
@@ -177,6 +215,7 @@ t.test(xA, xB)
 # Finding the sample size for detecting a group difference of 2
 # with sigma=1 and power=0.9
 # Her har vi ikke type = "one.sample" på
+# SÅ hvis vi får en n= 10 SÅ SKAL DER VÆRE !!!! 10 i hver AKA 20 i ALT!!!
 power.t.test(power=0.90, delta=2, sd=1, sig.level=0.05)
 
 # udfra hvad du giver den, regner den noget forskelligt eg
@@ -336,6 +375,10 @@ tapply(y, block, mean)
 3.866667-mean(y)
 ```
 
+## post hoc
+
+![](images/paste-2529B705.png)
+
 # PROPORTION analysis
 
 ## 1 population proportion analysis
@@ -482,6 +525,28 @@ o <- 96
 ## Bootstrapping
 
 # normal LR
+
+## h0 test om parameter = tal
+
+![](images/paste-75DE139F.png)
+
+```{r}
+B.H0 <- 1.005*10^8
+B0 <- 1.019e+08
+B0.sig =  5.867e+04
+n <- 10
+df <- n-2
+t.obs <- (B0-B.H0)/B0.sig
+t.obs
+# Husk abs a zobs
+p.val <- 2 * (1-pt(abs(t.obs), df))
+p.val
+
+```
+
+## sample correlation
+
+![](images/paste-22084D80.png)
 
 ### CI for parametre
 
