--- a/Samlet R.Rmd
+++ b/Samlet R.Rmd
@@ -595,19 +595,36 @@ B1.sigma <- 1.74
 B1 + c(-1,1)*tquant*B1.sigma
 ```
 
+## CONF OG PREDIC
+
 ![](images/paste-1FCEFCDC.png) ![](images/paste-121987EA.png)
 
 ```{r}
+### PÅ dette data
+# Manganese concentrations
+x <- c(0, 0, 2, 2, 4, 4, 6, 6, 8, 8, 10, 10)
+# ICP-AES values
+y <- c(114, 14, 870, 1141, 2087, 2212, 3353, 2633, 3970, 4299, 4950, 5207)
+fit <- lm(y ~ x)
+summary(fit)
+newdata <- data.frame(x = 5)
+predict(fit, newdata=newdata, interval="prediction",
+        level=0.95)
+####
+
 
 b0 <- -120
 b1 <- 1.113
 xnew <- 200
 
+# Dette er mean af x
 mean <- 178
 n <- 10
 df <- n-2
-sd <- 3.88
+sd <- 3.88  #Residual standard errpr
 sxx <- 1342
+# Alternativt 
+#sxx <- sd^2*(n-2)
 
 "CI:"
 tquantile <- qt(0.975, df)
